♻️ feat: refact register.

--- a/src/assets/lang/pt.json
+++ b/src/assets/lang/pt.json
@@ -1,182 +1,183 @@
 {
-    "title": "Painel | Skote - Modelo de Admin & Dashboard",
-    "t-menu":"Menu",
-    "t-dashboards":"Painéis",
-    "t-default":"Padrão",
-    "t-saas":"Saas",
-    "t-crypto":"Cripto",
-    "t-blog":"Blog",
-    "t-jobs":"Vagas",
-    "t-layouts":"Layouts",
-    "t-horizontal":"Horizontal",
-    "t-light-sidebar":"Barra Lateral Clara",
-    "t-compact-sidebar":"Barra Lateral Compacta",
-    "t-icon-sidebar":"Barra Lateral com Ícones",
-    "t-boxed-width":"Layout Boxed",
-    "t-preloader":"Pré-carregador",
-    "t-colored-sidebar":"Barra Lateral Colorida",
-    "t-scrollable":"Rolável",
-    "t-apps":"Aplicativos",
-    "t-tui-calendar":"TUI-Calendário",
-    "t-full-calendar":"Calendário Completo",
-    "t-chat":"Chat",
-    "t-file-manager":"Gerenciador de Arquivos",
-    "t-new":"Novo",
-    "t-ecommerce":"E-commerce",
-    "t-products":"Produtos",
-    "t-product-detail":"Detalhes do Produto",
-    "t-orders":"Pedidos",
-    "t-customers":"Clientes",
-    "t-cart":"Carrinho",
-    "t-checkout":"Finalizar Compra",
-    "t-shops":"Lojas",
-    "t-add-product":"Adicionar Produto",
-    "t-wallet":"Carteira",
-    "t-buy":"Comprar / Vender",
-    "t-exchange":"Troca",
-    "t-lending":"Empréstimos",
-    "t-kyc":"Aplicação KYC",
-    "t-ico":"Landing de ICO",
-    "t-email":"E-mail",
-    "t-inbox":"Caixa de Entrada",
-    "t-read-email":"Ler E-mail",
-    "t-email-templates":"Modelos de E-mail",
-    "t-basic-action":"Ação Básica",
-    "t-alert-email":"E-mail de Alerta",
-    "t-bill-email":"E-mail de Cobrança",
-    "t-invoices":"Faturas",
-    "t-invoice-list":"Lista de Faturas",
-    "t-invoice-detail":"Detalhes da Fatura",
-    "t-projects":"Projetos",
-    "t-p-grid":"Grade de Projetos",
-    "t-p-list":"Lista de Projetos",
-    "t-p-overview":"Visão Geral do Projeto",
-    "t-create-new":"Criar Novo",
-    "t-tasks":"Tarefas",
-    "t-task-list":"Lista de Tarefas",
-    "t-kanban-board":"Quadro Kanban",
-    "t-create-task":"Criar Tarefa",
-    "t-contacts":"Contatos",
-    "t-user-grid":"Grade de Usuários",
-    "t-user-list":"Lista de Usuários",
-    "t-edit-details":"Editar Detalhes",
-    "t-profile":"Perfil",
-    "t-blog-list":"Lista de Blogs",
-    "t-blog-grid":"Grade de Blogs",
-    "t-blog-details":"Detalhes do Blog",
-    "t-job-list":"Lista de Vagas",
-    "t-job-grid":"Grade de Vagas",
-    "t-apply-job":"Aplicar para Vaga",
-    "t-job-details":"Detalhes da Vaga",
-    "t-Jobs-categories":"Categorias de Vagas",
-    "t-candidate":"Candidato",
-    "t-list":"Lista",
-    "t-overview":"Visão Geral",
-    "t-pages":"Páginas",
-    "t-authentication":"Autenticação",
-    "t-login":"Login",
-    "t-login-2":"Login 2",
-    "t-register":"Registrar",
-    "t-register-2":"Registrar 2",
-    "t-recover-password":"Recuperar Senha",
-    "t-recover-password-2":"Recuperar Senha 2",
-    "t-lock-screen":"Tela de Bloqueio",
-    "t-lock-screen-2":"Tela de Bloqueio 2",
-    "t-confirm-mail":"Confirmar E-mail",
-    "t-confirm-mail-2":"Confirmar E-mail 2",
-    "t-email-verification":"Verificação de E-mail",
-    "t-email-verification-2":"Verificação de E-mail 2",
-    "t-two-step-verification":"Verificação em Duas Etapas",
-    "t-two-step-verification-2":"Verificação em Duas Etapas 2",
-    "t-utility":"Utilitários",
-    "t-starter-page":"Página Inicial",
-    "t-maintenance":"Manutenção",
-    "t-coming-soon":"Em Breve",
-    "t-timeline":"Linha do Tempo",
-    "t-faqs":"FAQs",
-    "t-pricing":"Preços",
-    "t-error-404":"Erro 404",
-    "t-error-500":"Erro 500",
-    "t-components":"Componentes",
-    "t-ui-elements":"Elementos de UI",
-    "t-alerts":"Alertas",
-    "t-buttons":"Botões",
-    "t-cards":"Cartões",
-    "t-carousel":"Carrossel",
-    "t-dropdowns":"Dropdowns",
-    "t-grid":"Grade",
-    "t-images":"Imagens",
-    "t-lightbox":"Lightbox",
-    "t-modals":"Modais",
-    "t-offcanvas":"Offcanvas",
-    "t-range-slider":"Slider de Intervalo",
-    "t-session-timeout":"Tempo de Sessão",
-    "t-progress-bars":"Barras de Progresso",
-    "t-sweet-alert":"Sweet-Alert",
-    "t-tabs-accordions":"Abas & Acordeões",
-    "t-typography":"Tipografia",
-    "t-video":"Vídeo",
-    "t-general":"Geral",
-    "t-colors":"Cores",
-    "t-utilities":"Utilidades",
-    "t-rating":"Avaliação",
-    "t-notifications":"Notificações",
-    "t-image-cropper":"Cortador de Imagem",
-    "t-forms":"Formulários",
-    "t-form-elements":"Elementos de Formulários",
-    "t-form-layouts":"Layouts de Formulários",
-    "t-form-validation":"Validação de Formulários",
-    "t-form-advanced":"Formulários Avançados",
-    "t-form-editors":"Editores de Formulários",
-    "t-form-upload":"Upload de Arquivos",
-    "t-form-xeditable":"Formulário Editável",
-    "t-form-repeater":"Formulário Repetidor",
-    "t-form-wizard":"Assistente de Formulário",
-    "t-form-mask":"Máscara de Formulário",
-    "t-tables":"Tabelas",
-    "t-basic-tables":"Tabelas Básicas",
-    "t-data-tables":"Tabelas de Dados",
-    "t-responsive-table":"Tabela Responsiva",
-    "t-editable-table":"Tabela Editável",
-    "t-charts":"Gráficos",
-    "t-apex-charts":"Gráficos Apex",
-    "t-e-charts":"Gráficos ECharts",
-    "t-chartjs-charts":"Gráficos Chart.js",
-    "t-flot-charts":"Gráficos Flot",
-    "t-ui-charts":"Gráficos Toast UI",
-    "t-knob-charts":"Gráficos Jquery Knob",
-    "t-sparkline-charts":"Gráficos Sparkline",
-    "t-icons":"Ícones",
-    "t-boxicons":"Boxicons",
-    "t-material-design":"Material Design",
-    "t-dripicons":"Dripicons",
-    "t-font-awesome":"Font Awesome",
-    "t-maps":"Mapas",
-    "t-g-maps":"Google Maps",
-    "t-v-maps":"Mapas Vetoriais",
-    "t-l-maps":"Mapas Leaflet",
-    "t-multi-level":"Multi Nível",
-    "t-level-1-1":"Nível 1.1",
-    "t-level-1-2":"Nível 1.2",
-    "t-level-2-1":"Nível 2.1",
-    "t-level-2-2":"Nível 2.2",
-    "t-extra-pages":"Páginas Extras",
-    "t-vertical":"Vertical",
-    "t-topbar-light":"Barra Superior Clara",
-    "t-colored-topbar":"Barra Superior Colorida",
-    "t-megamenu":"Mega Menu",
-    "t-ui-components":"Componentes UI",
-    "t-applications":"Aplicações",
-    "t-view-all":"Ver Todos",
-    "t-your-order":"Seu pedido foi realizado",
-    "t-grammer":"Se várias línguas coalescem a gramática",
-    "t-min-ago":"3 min atrás",
-    "t-simplified":"Parecerá inglês simplificado",
-    "t-shipped":"Seu item foi enviado",
-    "t-occidental":"Como um amigo cético de Cambridge do ocidente",
-    "t-hours-ago":"1 hora atrás",
-    "t-view-more":"Ver Mais",
-    "t-my-wallet":"Minha Carteira",
-    "t-t-settings":"Configurações",
-    "t-logout":"Sair"
+  "title": "Painel | Mandala Token - Modelo de Admin & Dashboard",
+  "t-menu": "Menu",
+  "t-dashboards": "Painéis",
+  "t-default": "Padrão",
+  "t-saas": "Saas",
+  "t-crypto": "Cripto",
+  "t-blog": "Blog",
+  "t-jobs": "Vagas",
+  "t-layouts": "Layouts",
+  "t-horizontal": "Horizontal",
+  "t-light-sidebar": "Barra Lateral Clara",
+  "t-compact-sidebar": "Barra Lateral Compacta",
+  "t-icon-sidebar": "Barra Lateral com Ícones",
+  "t-boxed-width": "Layout Boxed",
+  "t-preloader": "Pré-carregador",
+  "t-colored-sidebar": "Barra Lateral Colorida",
+  "t-scrollable": "Rolável",
+  "t-apps": "Aplicativos",
+  "t-tui-calendar": "TUI-Calendário",
+  "t-full-calendar": "Calendário Completo",
+  "t-chat": "Chat",
+  "t-file-manager": "Gerenciador de Arquivos",
+  "t-new": "Novo",
+  "t-ecommerce": "E-commerce",
+  "t-products": "Produtos",
+  "t-product-detail": "Detalhes do Produto",
+  "t-orders": "Pedidos",
+  "t-customers": "Clientes",
+  "t-cart": "Carrinho",
+  "t-checkout": "Finalizar Compra",
+  "t-shops": "Lojas",
+  "t-add-product": "Adicionar Produto",
+  "t-wallet": "Carteira",
+  "t-buy": "Comprar / Vender",
+  "t-exchange": "Troca",
+  "t-lending": "Empréstimos",
+  "t-kyc": "Aplicação KYC",
+  "t-ico": "Landing de ICO",
+  "t-email": "E-mail",
+  "t-inbox": "Caixa de Entrada",
+  "t-read-email": "Ler E-mail",
+  "t-email-templates": "Modelos de E-mail",
+  "t-basic-action": "Ação Básica",
+  "t-alert-email": "E-mail de Alerta",
+  "t-bill-email": "E-mail de Cobrança",
+  "t-invoices": "Faturas",
+  "t-invoice-list": "Lista de Faturas",
+  "t-invoice-detail": "Detalhes da Fatura",
+  "t-projects": "Projetos",
+  "t-p-grid": "Grade de Projetos",
+  "t-p-list": "Lista de Projetos",
+  "t-p-overview": "Visão Geral do Projeto",
+  "t-create-new": "Criar Novo",
+  "t-tasks": "Tarefas",
+  "t-task-list": "Lista de Tarefas",
+  "t-kanban-board": "Quadro Kanban",
+  "t-create-task": "Criar Tarefa",
+  "t-contacts": "Contatos",
+  "t-user-grid": "Grade de Usuários",
+  "t-user-list": "Lista de Usuários",
+  "t-edit-details": "Editar Detalhes",
+  "t-profile": "Perfil",
+  "t-blog-list": "Lista de Blogs",
+  "t-blog-grid": "Grade de Blogs",
+  "t-blog-details": "Detalhes do Blog",
+  "t-job-list": "Lista de Vagas",
+  "t-job-grid": "Grade de Vagas",
+  "t-apply-job": "Aplicar para Vaga",
+  "t-job-details": "Detalhes da Vaga",
+  "t-Jobs-categories": "Categorias de Vagas",
+  "t-candidate": "Candidato",
+  "t-list": "Lista",
+  "t-overview": "Visão Geral",
+  "t-pages": "Páginas",
+  "t-authentication": "Autenticação",
+  "t-login": "Login",
+  "t-login-2": "Login 2",
+  "t-register": "Registrar",
+  "t-register-2": "Registrar 2",
+  "t-recover-password": "Recuperar Senha",
+  "t-recover-password-2": "Recuperar Senha 2",
+  "t-lock-screen": "Tela de Bloqueio",
+  "t-lock-screen-2": "Tela de Bloqueio 2",
+  "t-confirm-mail": "Confirmar E-mail",
+  "t-confirm-mail-2": "Confirmar E-mail 2",
+  "t-email-verification": "Verificação de E-mail",
+  "t-email-verification-2": "Verificação de E-mail 2",
+  "t-two-step-verification": "Verificação em Duas Etapas",
+  "t-two-step-verification-2": "Verificação em Duas Etapas 2",
+  "t-utility": "Utilitários",
+  "t-starter-page": "Página Inicial",
+  "t-maintenance": "Manutenção",
+  "t-coming-soon": "Em Breve",
+  "t-timeline": "Linha do Tempo",
+  "t-faqs": "FAQs",
+  "t-pricing": "Preços",
+  "t-error-404": "Erro 404",
+  "t-error-500": "Erro 500",
+  "t-components": "Componentes",
+  "t-ui-elements": "Elementos de UI",
+  "t-alerts": "Alertas",
+  "t-buttons": "Botões",
+  "t-cards": "Cartões",
+  "t-carousel": "Carrossel",
+  "t-dropdowns": "Dropdowns",
+  "t-grid": "Grade",
+  "t-images": "Imagens",
+  "t-lightbox": "Lightbox",
+  "t-modals": "Modais",
+  "t-offcanvas": "Offcanvas",
+  "t-range-slider": "Slider de Intervalo",
+  "t-session-timeout": "Tempo de Sessão",
+  "t-progress-bars": "Barras de Progresso",
+  "t-sweet-alert": "Sweet-Alert",
+  "t-tabs-accordions": "Abas & Acordeões",
+  "t-typography": "Tipografia",
+  "t-video": "Vídeo",
+  "t-general": "Geral",
+  "t-colors": "Cores",
+  "t-utilities": "Utilidades",
+  "t-rating": "Avaliação",
+  "t-notifications": "Notificações",
+  "t-image-cropper": "Cortador de Imagem",
+  "t-forms": "Formulários",
+  "t-form-elements": "Elementos de Formulários",
+  "t-form-layouts": "Layouts de Formulários",
+  "t-form-validation": "Validação de Formulários",
+  "t-form-advanced": "Formulários Avançados",
+  "t-form-editors": "Editores de Formulários",
+  "t-form-upload": "Upload de Arquivos",
+  "t-form-xeditable": "Formulário Editável",
+  "t-form-repeater": "Formulário Repetidor",
+  "t-form-wizard": "Assistente de Formulário",
+  "t-form-mask": "Máscara de Formulário",
+  "t-tables": "Tabelas",
+  "t-basic-tables": "Tabelas Básicas",
+  "t-data-tables": "Tabelas de Dados",
+  "t-responsive-table": "Tabela Responsiva",
+  "t-editable-table": "Tabela Editável",
+  "t-charts": "Gráficos",
+  "t-apex-charts": "Gráficos Apex",
+  "t-e-charts": "Gráficos ECharts",
+  "t-chartjs-charts": "Gráficos Chart.js",
+  "t-flot-charts": "Gráficos Flot",
+  "t-ui-charts": "Gráficos Toast UI",
+  "t-knob-charts": "Gráficos Jquery Knob",
+  "t-sparkline-charts": "Gráficos Sparkline",
+  "t-icons": "Ícones",
+  "t-boxicons": "Boxicons",
+  "t-material-design": "Material Design",
+  "t-dripicons": "Dripicons",
+  "t-font-awesome": "Font Awesome",
+  "t-maps": "Mapas",
+  "t-g-maps": "Google Maps",
+  "t-v-maps": "Mapas Vetoriais",
+  "t-l-maps": "Mapas Leaflet",
+  "t-multi-level": "Multi Nível",
+  "t-level-1-1": "Nível 1.1",
+  "t-level-1-2": "Nível 1.2",
+  "t-level-2-1": "Nível 2.1",
+  "t-level-2-2": "Nível 2.2",
+  "t-extra-pages": "Páginas Extras",
+  "t-vertical": "Vertical",
+  "t-topbar-light": "Barra Superior Clara",
+  "t-colored-topbar": "Barra Superior Colorida",
+  "t-megamenu": "Mega Menu",
+  "t-ui-components": "Componentes UI",
+  "t-applications": "Aplicações",
+  "t-view-all": "Ver Todos",
+  "t-your-order": "Seu pedido foi realizado",
+  "t-grammer": "Se várias línguas coalescem a gramática",
+  "t-min-ago": "3 min atrás",
+  "t-simplified": "Parecerá inglês simplificado",
+  "t-shipped": "Seu item foi enviado",
+  "t-occidental": "Como um amigo cético de Cambridge do ocidente",
+  "t-hours-ago": "1 hora atrás",
+  "t-view-more": "Ver Mais",
+  "t-my-wallet": "Minha Carteira",
+  "t-t-settings": "Configurações",
+  "t-logout": "Sair",
+  "t-name": "Nome"
 }
