--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -153,5 +153,16 @@
   "Extra Pages": "Páginas Extras",
   "Horizontal layout": "Layout Horizontal",
   "Light Sidebar": "Barra Lateral Clara",
-  "Compact Sidebar": "Barra Lateral Compacta"
+  "Compact Sidebar": "Barra Lateral Compacta",
+  "Name": "Nome",
+  "Enter your name": "Escreva seu nome",
+  "Last name": "Sobrenome",
+  "Enter your last name": "Escreva seu sobrenome",
+  "Phone": "Telefone",
+  "Enter your phone": "Escreva seu telefone",
+  "Password": "Senha",
+  "Enter Password": "Escreva uma senha",
+  "Get your free Mandala account now.": "Crie sua conta na Mandala de graça",
+  "Already have an account": "Já tem uma conta",
+  "Free Register": "Registro Gratuito"
 }
