♻️ feat: add translate at login page.

--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -154,6 +154,14 @@
   "Horizontal layout": "Layout Horizontal",
   "Light Sidebar": "Barra Lateral Clara",
   "Compact Sidebar": "Barra Lateral Compacta",
+  "Welcome Back !": "Bem vindo de volta!",
+  "Sign in to continue to Mandala.": "Entre para continuar para Mandala",
+  "Don't have an account ?": "Ainda não tem uma conta?",
+  "Signup now": "Faça uma conta agora!",
+  "Log In": "Logar",
+  "Remember me": "Lembrar",
+  "Forgot your password?": "Esqueceu a senha?",
+  "Sign in with": "Logue com",
   "Name": "Nome",
   "Enter your name": "Escreva seu nome",
   "Last name": "Sobrenome",
