--- a/src/locales/sp/translation.json
+++ b/src/locales/sp/translation.json
@@ -175,5 +175,7 @@
   "Enter New Password": "Escriba su Nueva Contraseña",
   "Confirm New Password": "Confirme su Nueva Contraseña",
   "Enter Confirm New Password": "Repita su Nueva Contraseña",
-  "Check your inbox to confirm your email and unlock all features!": "¡Revise su bandeja de entrada para confirmar su correo electrónico y desbloquear todas las funciones!"
+  "Check your inbox to confirm your email and unlock all features!": "¡Revise su bandeja de entrada para confirmar su correo electrónico y desbloquear todas las funciones!",
+  "Update User Data": "Usuario Actualizado",
+  "Succesful Change Password": "Contraseña Cambiada con Éxito"
 }
